Testing fix to aos overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -273,6 +273,7 @@ main{
             justify-content: center;
             align-items: flex-start;
             height: 500px;
+            overflow-x: hidden;
         }
 
         .landing-page__img{
@@ -291,6 +292,7 @@ main{
 
         .landing-page__content{
             width: 50vw;
+            overflow-x: hidden;
             
             .landing-page__title{
                 color: $sub-color;
@@ -423,6 +425,7 @@ main{
     border-radius: 15px;
     box-shadow: 0px 0px 5px rgba(81, 84, 90, 0.539);
     overflow-y: scroll;
+    overflow-x: hidden;
 
     .announcement__header{
         display: flex;
@@ -642,6 +645,7 @@ main{
         text-align: center;
         margin: 2vw;
         width: 100%;
+        overflow-x: hidden;
     }
 
     .tutorial__content{
@@ -652,6 +656,7 @@ main{
         gap: 3vw;
 
         .tutorial__video-container{
+            overflow-x: hidden;
             margin-bottom: 5vw;
             width: 100%;
             height: 50vw;
@@ -670,6 +675,7 @@ main{
         .tutorial__procedure{
             display: flex;
             flex-flow: row nowrap;
+            overflow-x: hidden;
         }
     }
 }
